--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     command: >
       v2
       --model-id sentence-transformers/all-MiniLM-L6-v2
+      --model-id intfloat/multilingual-e5-small
       --host 0.0.0.0
       --port 8081
       --batch-size 32
